added text/button animation

--- a/eachItem.html
+++ b/eachItem.html
@@ -1,20 +1,24 @@
 <!-- Each Item -->
 <div class="grid grid-cols-5 gap-2">
     <!-- Text -->
-    <div class="break-all col-span-4 flex px-1">
-        • Lorem ipsum dolor sit amet consectetur adipisicing.• Lorem ipsum dolor sit amet consectetur adipisicing.• Lorem ipsum dolor sit amet consectetur adipisicing.• Lorem ipsum dolor sit amet consectetur adipisicing.
+    <div class="break-all col-span-4 flex 
+    font-style-opensans font-light 
+    transform hover:scale-110 duration-200 hover:translate-x-4
+    px-1">
+        • Lorem ipsum dolor sit amet consectetur adipisicing.• 
     </div>
     <!-- Buttons -->
     <div class="col-span-1 flex justify-center">
         <!-- Done Button -->
-        <div class="align-self-center">
+        <div class="align-self-center ">
             <button style="outline:0;" class="group mx-3 text-green-500"> 
-                <div class="font-style-opensans text-lg  
+                <div class="transform hover:scale-90 duration-200 font-style-opensans text-lg  
                 ring-1 rounded-full ring-white
                 group-hover:bg-white
                 group-hover:text-gray-900  
                 px-2 
-                align-middle">
+                align-middle
+                ">
                 ✔
                 </div> 
             </button>
@@ -22,7 +26,7 @@
         <!-- Delete Button -->
         <div class="align-self-center">
             <button style="outline:0;" class="group mx-3 text-red-500"  >
-                <div class="font-style-opensans text-lg  
+                <div class="transform hover:scale-90 duration-200 font-style-opensans text-lg  
                 ring-1 rounded-full ring-white
                 group-hover:bg-white
                 group-hover:text-gray-900  
