--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                 <button id="add-button" style="outline:0;"
                 class="group
                 hover:bg-white
+                transform hover:scale-90 duration-200
                 shadow-md ring-1 rounded-full ring-white" 
                 onclick='onClickAddEvent()'>  
                     <div class="text-white shadow-none">
