added reset button. removed delete button from finished event

--- a/index.html
+++ b/index.html
@@ -51,16 +51,30 @@
                 px-4 py-1 mr-2
                 font-style-opensans">
                 <button id="add-button" style="outline:0;"
-                class="group
+                class="group mr-2
                 hover:bg-white
                 transform hover:scale-90 duration-200
                 shadow-md ring-1 rounded-full ring-white" 
                 onclick='onClickAddEvent()'>  
                     <div class="text-white shadow-none">
                         <div class="font-style-opensans text-lg  group-hover:text-gray-900  
-                        px-2 
+                        px-3 
                         align-middle">
                         +
+                        </div> 
+                    </div>
+                </button>
+                <button id="add-button" style="outline:0;"
+                class="group
+                hover:bg-white
+                transform hover:scale-90 duration-200
+                shadow-md ring-1 rounded-full ring-white" 
+                onclick='onClickReset()'>  
+                    <div class="text-white shadow-none">
+                        <div class="font-style-opensans text-lg  group-hover:text-gray-900  
+                        px-2 
+                        align-middle">
+                        🗘
                         </div> 
                     </div>
                 </button>
